--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,57 +1,70 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 @layer components {
-  .center-horizontal {
-    @apply w-full flex justify-center items-center
-  }
+	.center-horizontal {
+		@apply w-full flex justify-center items-center;
+	}
 
-  .heading-1 {
-    @apply text-3xl font-bold
-  }
+	.heading-1 {
+		@apply text-3xl font-bold;
+	}
 
-  .gradient-btn {
-    @apply bg-gradient-to-r from-[#000000] to-[#434343] font-bold py-2 px-4 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out 
-  }
+	.gradient-btn {
+		@apply bg-gradient-to-r from-[#000000] to-[#434343] font-bold py-2 px-4 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out;
+	}
 
-  .white-btn {
-    @apply bg-white text-black hover:bg-white hover:text-black font-semibold text-base
-  }
+	.white-btn {
+		@apply bg-white text-black hover:bg-white hover:text-black font-semibold text-base;
+	}
 
-  .profile {
-    @apply rounded-full object-cover w-10 h-10
-  }
+	.profile {
+		@apply rounded-full object-cover w-10 h-10;
+	}
 }
 
 *::-webkit-scrollbar {
-  height: 4px;
-  width: 4px;
+	height: 4px;
+	width: 4px;
 }
 *::-webkit-scrollbar-track {
-  border-radius: 5px;
-  background-color: #4B5563;
+	border-radius: 5px;
+	background-color: #4b5563;
 }
 
 *::-webkit-scrollbar-track:hover {
-  background-color: #4B5563;
+	background-color: #4b5563;
 }
 
 *::-webkit-scrollbar-track:active {
-  background-color: #4B5563;
+	background-color: #4b5563;
 }
 
 *::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background-color: #b8c0c2;
+	border-radius: 5px;
+	background-color: #b8c0c2;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #b8c0c2;
+	background-color: #b8c0c2;
 }
 
 *::-webkit-scrollbar-thumb:active {
-  background-color: #b8c0c2;
+	background-color: #b8c0c2;
 }
+
+.swiper-button-next,
+.swiper-button-prev {
+	background-color: #1e1e1e;
+	padding: 20px;
+	z-index: 100;
+	fill: black !important;
+	stroke: black !important;
+	border-radius: 100%;
+	--swiper-navigation-size: 15px;
+	color: gainsboro !important;
+}
+
+
+
